--- a/src/todo
+++ b/src/todo
@@ -8,7 +8,8 @@
 //   - Zegar 4MHz. Teoretycznie powinienem albo ustawić 1MHz, albo zostawić 4MHz ale wtedy
 //     zaimplementować procesor 65C02, ale mi się tego nie chce robić.
 // == GPU
-//  - 1MHz
+//  - 4MHz
+//  - 2 cykle na piksel
 //  - 256x240, 4bpp (paleta VGA, 16 kolorów)
 //  - 64KB pamięci VRAM (starczy na double buffering)
 //  - 1 bufor - 30720 bytes = 30.7KB
@@ -19,7 +20,7 @@
 //    - Rejestr statusu (VSYNC, HSYNC, inne flagi)
 //    - Rejestr przerwań (włączenie/wyłączenie przerwań VSYNC/HSYNC)
 // == DMA
-//  - 1MHz
+//  - 2MHz
 //  - Transferuje dane z pamięci 6502 do GPU
 //  - Nie zatrzymuje CPU na czas transferu (bo magistrala pozwala na 2 urządzenia)
 //  - Transfer 1 bajtu to 1 cykl
@@ -100,6 +101,7 @@
 
 // == GPU - Napisanie bazy (pamięć, rejestry)
 // == GPU - Utworzenie okienka
+// == GPU - VSYNC / HSYNC
 // == GPU - Wyświetlanie co 0,5s jednego z buforów na zmianę
 
 // == DMA
